2008-11-11  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.99.
	* NEWS: Update.

	* userhelper.h: Document request and response formats.
	(UH_REQUEST_SIZE_DIGITS): New macro.
	(UH_SN_ID): Use a printable character value.
	* userhelper.c (send_request, send_request_int): New functions.
	(converse_pipe, prompt_pipe): Use send_request and send_request_int.
	* userhelper-wrap.c (userhelper_handle_childout): Rename from
	userhelper_parse_childout.  Receive an already parsed message as
	parameters.
	(userhelper_read_childout): Handle the updated request format.

2008-10-28  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.98.1.
	* NEWS: Update.
	* po/LINGUAS: Update.

2008-08-03  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 1.98.
	* NEWS: Update.

	* userhelper-wrap.c (struct response): Remove member user.  New memeber
	user_label.
	(userhelper_parse_childout): Create the "Authenticating as..." label
	as soon as the user name is known, not only when creating the dialog
	to ask questions.  (Also causes the label to be shown in non-modal
	dialogs with no prompts.)

	* userhelper-wrap.c (userhelper_parse_childout): Left-justify all
	messages.

	* userhelper-wrap.c (struct response): New member
	dialog_response_handler.
	(userhelper_dialog_response): New function.
	(userhelper_parse_childout): Support non-modal dialogs with no prompts.
	Keep resp->table alive across such dialogs.  Don't unnecessarily zero
	members of resp before freeing it.

	* userhelper-wrap.c (debug_msg)
	* userhelper.c (debug_msg)
	* userinfo.c (debug_msg): New macro.  Use it instead of surrounding
	debug prints with #ifdef DEBUG_USERHELPER.

2008-05-17  Miloslav Trmač  <mitr@redhat.com>

	* userhelper.c (wrap): Remove /usr/X11R6/bin from the default path.
	Original patch by Michel Samia <msamia@redhat.com>.

2008-05-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Rename from configure.in.  Version 1.97.
	* NEWS: Update.
